--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -5,8 +5,8 @@ MAINTAINER frankie@robertson.name
 WORKDIR /root/
 
 
-RUN apk add --no-cache python git libsqlite3-dev python-dev cython uwsgi \
-	python-flask build-essential python-requests python-yaml
+RUN apk add --no-cache python2 git sqlite-libs sqlite-dev python2-dev cython uwsgi \
+	py2-flask build-base py2-requests py2-yaml
 
 COPY setup.sh /root/
 RUN bash setup.sh
