Add bash to base

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /root/
 
 
 RUN apk add --no-cache python2 git sqlite-libs sqlite-dev python2-dev cython uwsgi \
-	py2-flask build-base py2-requests py2-yaml
+	py2-flask build-base py2-requests py2-yaml bash
 
 COPY setup.sh /root/
 RUN bash setup.sh
